fix(wizard): remove content extra padding top (#1618)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?
Wizard content have an extra 12px padding top.

Issue Number: CDE-2444

## What is the new behavior?
Wizard content extra 12px padding top is removed.

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -335,7 +335,6 @@
       display: flex;
       flex-grow: 1;
       width: 100%;
-      padding-top: tokens.$cds-global-space-6;
     }
 
     &.wizard-md {
